<resources>
    <string name="app_name">What To Read</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="search_title">Search Title</string>
    <string name="search_author">Search Author</string>
    <string name="search_isbn">Search ISBN</string>
    <string name="reading_list">Reading List</string>
    <string name="search_title_label">Search Title</string>
    <string name="search_author_label">Search Author</string>
    <string name="search_button_label">Search</string>
</resources>
